Fixed a number of small bugs. Can fill and edit vacancies in shifts

--- a/calendar.css
+++ b/calendar.css
@@ -36,6 +36,10 @@ table#calendar td{
 	border: solid 1px #264576;
 }
 
+table#calendar td:hover {
+	background:rgba(150,150,150,0.6);
+}
+
 #calendar td.dow {
 	height:25px;
 }
@@ -54,6 +58,23 @@ table#calendar td{
 	font-size:9pt;
 }
 
+.celllink {
+	display:block;
+	width:100%;
+	height:100%;
+	position:relative;
+	top:-10px;
+}
+
+#calendar .date, .vacancies{
+	font-weight:bold;
+}
+
+.name, .vacancies{
+	display:inline-block;
+	padding:0;
+	margin:15px 0 0 1px;
+}
 
 .hour{
 	width:90px;
